Подчищены предупреждения и форматирование